--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,18 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    signingConfigs {
+        release {
+            keyAlias 'my_key_alias'
+            keyPassword '8a0775546981'
+            storeFile file('my-release-key.keystore')
+            storePassword '8a0775546981'
+        }
+    }
     buildTypes {
         release {
-            minifyEnabled false
+            signingConfig signingConfigs.release
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
